test/compare/testdata/fixedbugs/issue814.go
// errorcheck

package main

var ۶ = 0 // ERROR `identifier cannot begin with digit U+06F6 '۶'`

func main() {}
